# local-vllm-dashboard

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  Dockerfile  LICENSE  README.md  alembic.ini  compose.yaml  pyproject.toml
.github/workflows/: ci.yaml
docs/: CONTRACTS.md  DESIGN.md  DEVELOPMENT.md
migrations/: env.py
migrations/versions/: 20260723_01_initial_ingestion.py
schemas/: bundle-v1.schema.json
scripts/: generate_contract_schema.py
src/local_vllm_dashboard/: cli.py
src/local_vllm_dashboard/adapter/: __init__.py  lm_eval.py  perf_eval.py
src/local_vllm_dashboard/api/: __init__.py  app.py  server.py
src/local_vllm_dashboard/contracts/: __init__.py  schema.py  v1.py
src/local_vllm_dashboard/db/: __init__.py  models.py  repository.py  schema.py  session.py
src/local_vllm_dashboard/publisher/: __init__.py  client.py
tests/: test_contracts_v1.py  test_perf_eval_fixtures.py
tests/fixtures/contracts/v1/: accuracy.json  performance.json
tests/fixtures/perf_eval/: glm_5_2_mxfp4_mi355x.yaml  glm_5_2_mxfp4_mi355x_failed_bench.json  lm_eval_results.json  prefix_cache_partial_failure_bench.json  prefix_cache_workload.yaml
tests/integration/: test_ingestion_api.py
tests/unit/: test_cli.py  test_lm_eval_adapter.py  test_perf_eval_adapter.py  test_publisher.py  test_repository.py
