[project]
name = "local-vllm-dashboard"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "bandit>=1.8.6,<2",
    "detect-secrets>=1.5.0,<2",
    "pip-audit>=2.9.0,<3",
    "pre-commit>=4.2.0,<5",
    "ruff>=0.12.0,<1",
    "ty>=0.0.1a16,<1",
]

[tool.uv]
package = false

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "S", "UP"]

[tool.ty.environment]
python-version = "3.12"

[tool.bandit]
exclude_dirs = [".git", ".venv", "tests"]
