[project]
name = "local-vllm-dashboard"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.11.0,<3",
]

[dependency-groups]
dev = [
    "bandit>=1.8.6,<2",
    "detect-secrets>=1.5.0,<2",
    "pip-audit>=2.9.0,<3",
    "pre-commit>=4.2.0,<5",
    "pytest>=9.0.3,<10",
    "ruff>=0.12.0,<1",
    "ty>=0.0.1a16,<1",
]

[tool.uv]
package = true

[build-system]
requires = ["uv_build>=0.8.0,<1"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "S", "UP"]

[tool.ruff.lint.per-file-ignores]
"src/local_vllm_dashboard/contracts/*.py" = ["S105"]
"tests/**/*.py" = ["S101"]

[tool.ty.environment]
python-version = "3.12"

[tool.bandit]
exclude_dirs = [".git", ".venv", "tests"]
skips = ["B105"]
