[project]
name = "local-vllm-dashboard"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.0,<2",
    "fastapi>=0.116.0,<1",
    "httpx>=0.28.0,<1",
    "psycopg[binary]>=3.2.0,<4",
    "pydantic>=2.11.0,<3",
    "pydantic-settings>=2.10.0,<3",
    "pyyaml>=6.0.0,<7",
    "sqlalchemy>=2.0.0,<3",
    "uvicorn>=0.35.0,<1",
]

[project.scripts]
benchmark-results = "local_vllm_dashboard.cli:main"

[dependency-groups]
dev = [
    "bandit>=1.8.6,<2",
    "detect-secrets>=1.5.0,<2",
    "pip-audit>=2.9.0,<3",
    "pre-commit>=4.2.0,<5",
    "pytest>=9.0.3,<10",
    "pytest-cov>=6.2.0,<8",
    "ruff>=0.12.0,<1",
    "ty>=0.0.1a16,<1",
]

[tool.uv]
package = true

[build-system]
requires = ["uv_build>=0.8.0,<1"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "S", "UP"]

[tool.ruff.lint.per-file-ignores]
"src/local_vllm_dashboard/contracts/*.py" = ["S105"]
"tests/**/*.py" = ["S101"]

[tool.pytest.ini_options]
filterwarnings = [
    "ignore:Using `httpx` with `starlette.testclient` is deprecated:starlette.testclient.StarletteDeprecationWarning",
]

[tool.ty.environment]
python-version = "3.12"

[tool.bandit]
exclude_dirs = [".git", ".venv", "tests"]
skips = ["B105"]
